--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
@@ -8,7 +8,7 @@
 </button>
 
 <div class="text-center">
-  <h1 class="title-menu--h1">Tipo de documento 
+  <h1 class="title-menu--h1">Observaciones 
     {{ data.llaveMen }}
   </h1>
   <p>
