--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-recorrido-obra/form-recorrido-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-recorrido-obra/form-recorrido-obra.component.html
@@ -206,7 +206,7 @@
     </button>
   </div>
 </form>
-<app-form-representante [numRepresentantesRecorrido] = "addressForm.get('numRepresentantesRecorrido').value" [proyectoEntregaEtcId]= "addressForm.get('proyectoEntregaEtcid').value" [representanteEtcrecorrido] = "representanteEtcrecorrido"></app-form-representante>
+<app-form-representante [numRepresentantesRecorrido] = "addressForm.get('numRepresentantesRecorrido').value" [proyectoEntregaEtcId]= "addressForm.get('proyectoEntregaEtcid').value" [representanteEtcrecorrido] = "representanteEtcrecorrido" (callOnSubmitParent)="onSubmit()"></app-form-representante>
 <!--<mat-accordion class="animatedDown" *ngIf="addressForm.get('numRepresentantesRecorrido').value">
   <mat-expansion-panel
     class="expansion-style sub-expansion"
