--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-observaciones-cumplimiento-interventoria/tabla-observaciones-cumplimiento-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-observaciones-cumplimiento-interventoria/tabla-observaciones-cumplimiento-interventoria.component.html
@@ -23,4 +23,30 @@
     </mat-card-content>
   </mat-card>
 </div>
-<app-tabla-historial-observaciones *ngIf="existe_historial && anexos" [data]="anexos"></app-tabla-historial-observaciones>
+<div class="text-left">
+  <mat-card class="shipping-card var-main-gris" *ngIf="anexos && !existe_data && existe_historial">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="mat-card-title header-card--text">
+        Verificación de responsables de grupo de novedades y liquidaciones
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        <strong>
+          {{anexos.historialInformeFinalObservacionesInterventoria.fechaCreacion | date:'dd/MM/yyyy' }}
+        </strong>
+      </p>
+      <p>
+        <strong>
+          ¿Desde el grupo de novedades y liquidaciones tiene observaciones adicionales al informe final y anexos?:
+        </strong>
+        <span *ngIf="anexos.tieneObservacionesInterventoria || (anexos.estadoCumplimiento === '4' && !anexos.tieneObservacionesInterventoria && anexos.historialInformeFinalObservacionesInterventoria.length > 0)"> Si</span>
+        <span *ngIf="(!anexos.tieneObservacionesInterventoria && anexos.estadoCumplimiento !== '4') || (anexos.estadoCumplimiento === '4' && !anexos.tieneObservacionesInterventoria && anexos.historialInformeFinalObservacionesInterventoria.length < 0)"> No</span>    
+      </p>
+      <p *ngIf="anexos.tieneObservacionesInterventoria" [innerHTML]="anexos.historialInformeFinalObservacionesInterventoria.observaciones">
+      <p *ngIf="anexos.tieneObservacionesInterventoria || (anexos.estadoCumplimiento === '4' && !anexos.tieneObservacionesInterventoria && anexos.historialInformeFinalObservacionesInterventoria.length > 0)" [innerHTML]="anexos.historialInformeFinalObservacionesInterventoria[0].observaciones">
+      </p>
+    </mat-card-content>
+  </mat-card>
+</div>
+<!--<app-tabla-historial-observaciones *ngIf="existe_historial && anexos" [data]="anexos"></app-tabla-historial-observaciones>-->
