--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -95,7 +95,8 @@
                                 [routerLink]="[ 'verDetalleAprobarSolicitud', element.contratoId, element.solicitudPagoId ]"
                                 *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion
                                         || element.estadoCodigo === this.listaEstadoSolicitudPago.enProcesoAutorizacion
-                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaVerificacionFinanciera">
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaVerificacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision">
                                 Ver detalle
                         </button>
 
@@ -140,7 +141,8 @@
                                 [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]"
                                 *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion
                                         || element.estadoCodigo === this.listaEstadoSolicitudPago.enProcesoAutorizacion
-                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaVerificacionFinanciera">
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaVerificacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision">
                                 Ver detalle
                         </button>
 
