--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -203,6 +203,21 @@
         -->
       </mat-card-content>
     </mat-card>
+
+    <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngIf="observacion !== undefined">
+      <mat-card-header class="header-card header-card--margin">
+          <mat-card-title class="header-card--text textoGris">
+              Observación {{ esAutorizar === true ? 'de la coordinación' : 'del apoyo a la supervisión' }}
+          </mat-card-title>
+      </mat-card-header>
+      <mat-card-content style="text-align: left;">
+          <p><b> {{ observacion.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+          <p *ngIf="observacion.tieneObservacion === true"><b>¿Desde {{ esAutorizar === true ? 'la coordinación' : 'el apoyo a la supervisión' }} tiene observaciones a los descuentos de la Dirección Técnica?:</b> Si</p>
+          <p *ngIf="observacion.tieneObservacion === false"><b>¿Desde {{ esAutorizar === true ? 'la coordinación' : 'el apoyo a la supervisión' }} tiene observaciones a los descuentos de la Dirección Técnica?:</b> No</p>
+          <section [innerHTML]="observacion.observacion" *ngIf="observacion.tieneObservacion === true"></section>
+      </mat-card-content>
+    </mat-card>
+
     <div class="text-center mb-2em">
       <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === false">
         <img src="assets/img/icon/guardar.svg">
