--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/detalle-factura-proyectos-asociados/detalle-factura-proyectos-asociados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/detalle-factura-proyectos-asociados/detalle-factura-proyectos-asociados.component.html
@@ -224,6 +224,21 @@
                     </button>
                 </div>
             </div>
+
+            <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngIf="observacion !== undefined">
+                <mat-card-header class="header-card header-card--margin">
+                    <mat-card-title class="header-card--text textoGris">
+                        Observación de la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }}
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content style="text-align: left;">
+                    <p><b> {{ observacion.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                    <p *ngIf="observacion.tieneObservacion === true"><b>¿Desde la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }} tiene observaciones a los detalles de la factura para proyectos asociados?:</b> Si</p>
+                    <p *ngIf="observacion.tieneObservacion === false"><b>¿Desde la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }} tiene observaciones a los detalles de la factura para proyectos asociados?:</b> No</p>
+                    <section [innerHTML]="observacion.observacion" *ngIf="observacion.tieneObservacion === true"></section>
+                </mat-card-content>
+            </mat-card>
+
             <div class="text-center mb-2em">
                 <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="projects.dirty === false">
                   <img src="assets/img/icon/guardar.svg">
@@ -292,6 +307,20 @@
                     <p><strong>Valor facturado para el proyecto en el criterio:</strong> ${{ criterio.valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
                     <br>
                 </div>
+            </mat-card-content>
+        </mat-card>
+
+        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngIf="observacion !== undefined">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observación de la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }}
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <p><b> {{ observacion.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                <p *ngIf="observacion.tieneObservacion === true"><b>¿Desde la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }} tiene observaciones a los detalles de la factura para proyectos asociados?:</b> Si</p>
+                <p *ngIf="observacion.tieneObservacion === false"><b>¿Desde la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }} tiene observaciones a los detalles de la factura para proyectos asociados?:</b> No</p>
+                <section [innerHTML]="observacion.observacion" *ngIf="observacion.tieneObservacion === true"></section>
             </mat-card-content>
         </mat-card>
     </div>
