--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -7,7 +7,7 @@
     <div class="col-md-12">
       <div class="row">
         <div class="pr-1">
-          <label class="label-left" for="criterioPago"               [ngClass]="{
+          <label class="label-left" for="criterioPago" [ngClass]="{
             'color-secondaryColor':
               (addressForm.get('criterioPago').invalid && addressForm.get('criterioPago').touched) ||
               (addressForm.get('criterioPago').invalid && estaEditando)
@@ -232,6 +232,21 @@
       </div>
     </div>
   </div>
+
+    <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngIf="observacion !== undefined">
+        <mat-card-header class="header-card header-card--margin">
+            <mat-card-title class="header-card--text textoGris">
+                Observación de la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }}
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content style="text-align: left;">
+            <p><b> {{ observacion.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+            <p *ngIf="observacion.tieneObservacion === true"><b>¿Desde la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }} tiene observaciones a los criterios de pago incluidos en la factura?:</b> Si</p>
+            <p *ngIf="observacion.tieneObservacion === false"><b>¿Desde la {{ esAutorizar === true ? 'coordinación' : 'apoyo a la supervisión' }} tiene observaciones a los criterios de pago incluidos en la factura?:</b> No</p>
+            <section [innerHTML]="observacion.observacion" *ngIf="observacion.tieneObservacion === true"></section>
+        </mat-card-content>
+    </mat-card>
+
   <div class="text-center mb-2em">
     <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="criterios.dirty === false">
       <img src="assets/img/icon/guardar.svg">
