--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -95,18 +95,28 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
     
-                        <app-form-cargar-forma-de-pago [contrato]="contrato" [tipoSolicitud]="contrato.solicitudPagoOnly.tipoSolicitudCodigo" [esUnEditar]="true"></app-form-cargar-forma-de-pago>
+                        <app-form-cargar-forma-de-pago  [contrato]="contrato"
+                                                        [tipoSolicitud]="contrato.solicitudPagoOnly.tipoSolicitudCodigo"
+                                                        [esUnEditar]="true"
+                                                        [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
+                                                        [listaMenusId]="menusIdPath">
+                        </app-form-cargar-forma-de-pago>
                     </mat-expansion-panel>
                 </mat-accordion>
                 <mat-accordion>
                     <mat-expansion-panel class="expansion-style">
                         <mat-expansion-panel-header class="expansion-style--header">
-                            <mat-panel-title class="expansion-style--title" [ngClass]="enabledAcordeon( 'solicitudDePago', registroCompletoAcordeones.registroCompletoFormaDePago )">
+                            <mat-panel-title class="expansion-style--title" [ngClass]="tieneObservacionSemaforo === true ? 'en-proceso' : enabledAcordeon( 'solicitudDePago', registroCompletoAcordeones.registroCompletoFormaDePago )">
                                 Registrar solicitud de pago
                             </mat-panel-title>
                         </mat-expansion-panel-header>
 
-                        <app-form-registrar-solicitud-de-pago [contrato]="contrato" *ngIf="registroCompletoAcordeones.registroCompletoFormaDePago === true"></app-form-registrar-solicitud-de-pago>
+                        <app-form-registrar-solicitud-de-pago   [contrato]="contrato"
+                                                                *ngIf="registroCompletoAcordeones.registroCompletoFormaDePago === true"
+                                                                [listaMenusId]="menusIdPath"
+                                                                [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
+                                                                (tieneObservacionSemaforo)="tieneObservacionSemaforo = $event">
+                        </app-form-registrar-solicitud-de-pago>
                     </mat-expansion-panel>
                 </mat-accordion>
             </div>
@@ -119,12 +129,17 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="enabledAcordeon( 'listaChequeo', registroCompletoAcordeones.registroCompletoSolicitudPago )">
+                <mat-panel-title class="expansion-style--title" [ngClass]="tieneObservacionSemaforoListaChequeo === true ? 'en-proceso' : enabledAcordeon( 'listaChequeo', registroCompletoAcordeones.registroCompletoSolicitudPago )">
                     Validar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-validar-lista-chequeo [contrato]="contrato" *ngIf="registroCompletoAcordeones.registroCompletoSolicitudPago === true"></app-validar-lista-chequeo>
+            <app-validar-lista-chequeo  [contrato]="contrato"
+                                        [listaMenusId]="menusIdPath"
+                                        [listaChequeoCodigo]="listaTipoObservacionSolicitudes.listaChequeoCodigo"
+                                        *ngIf="registroCompletoAcordeones.registroCompletoSolicitudPago === true"
+                                        (semaforoObservacion)="tieneObservacionSemaforoListaChequeo = $event">
+            </app-validar-lista-chequeo>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
@@ -135,7 +150,11 @@
                     Soporte de la solicitud
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-form-soporte-solicitud-url [solicitudPago]="contrato.solicitudPagoOnly" *ngIf="registroCompletoAcordeones.registroCompletoListaChequeo === true"></app-form-soporte-solicitud-url>
+            <app-form-soporte-solicitud-url [solicitudPago]="contrato.solicitudPagoOnly"
+                                            [listaMenusId]="menusIdPath"
+                                            [soporteSolicitudCodigo]="listaTipoObservacionSolicitudes.soporteSolicitudCodigo"
+                                            *ngIf="registroCompletoAcordeones.registroCompletoListaChequeo === true">
+            </app-form-soporte-solicitud-url>
         </mat-expansion-panel>
     </mat-accordion>
     <div style="margin-top: 1em;margin-bottom: 1em;">
